--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <h1>My Contact Details</h1>
     <p>Phone : 8056026775</p>
     <p>Email: ssnaren23@gmail.com</p>
+    <link rel="stylesheet" href="css\styles.css">
 </head>
 
 <form action="mailto:ssnaren23@gmail.com" method="post" enctype="text/plain">
