--- a/hobbies.html
+++ b/hobbies.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
-    <h3>Hobbies</h3>
+    <h3>My Hobbies</h3>
     <ol>
         <li>Coding</li>
         <li><a href="https://www.youtube.com/watch?v=ZL_L6Do9Ano">Cricket</a> </li>
